# web3auth-demo

./: .env.example  .gitignore  README.md  pyproject.toml
authors_books/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
authors_books/migrations/: 0001_add_authors_and_books.py  0002_add_unique_constraint_for_books.py  0003_remove_default_options.py
demo/: settings.py  urls.py
web3_auth/: apps.py  redis.py  serializers.py  urls.py  utils.py  validators.py  views.py
